<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/register_username_et"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/user"
            android:textColor="@color/clr_light_blue"
            android:textStyle="bold"
            android:inputType="text"
            android:background="@drawable/bg_edit_text__blue_border"/>

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/email"
            android:textColor="@color/clr_light_blue"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_edit_text__blue_border"/>

        <EditText
            android:id="@+id/register_phone_et"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/pho"
            android:textColor="@color/clr_light_blue"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="10"
            android:background="@drawable/bg_white_edit_text"/>

        <EditText
            android:id="@+id/register_pass_et"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:background="@drawable/bg_white_edit_text"/>

        <EditText
            android:id="@+id/register_pass_et1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:hint="@string/cpass"
            android:inputType="textPassword"
            android:background="@drawable/bg_white_edit_text"/>



        <Button
            android:id="@+id/create_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cre"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ald"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_container1"
                android:backgroundTint="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/loghere"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>