<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardActivity"
    android:background="@drawable/bg1">
    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_message"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                >
                <LinearLayout
                    android:id="@+id/transcript_llt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/speak_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transcript_message"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/forms_llt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/pen_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forms_message"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/report_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reports_message"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/settings_llt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/settings_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_message"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>