<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/personal_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/green"
            />
        <LinearLayout
            android:layout_below="@id/personal_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_container1"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/full_name"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <EditText
                    android:id="@+id/form_fullname_et"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="Full name"
                    />
                <ImageView
                    android:id="@+id/fullname_rec"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mic_icon"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/personal_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_container1"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/you_age"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <EditText
                    android:id="@+id/form_age_et"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    />
                <ImageView
                    android:id="@+id/age_rec"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mic_icon"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/personal_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_container1"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/father_name"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <EditText
                    android:id="@+id/form_father_name_et"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="Father's name"
                    />
                <ImageView
                    android:id="@+id/fathername_rec"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mic_icon"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/personal_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_container1"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/mother_name"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <EditText
                    android:id="@+id/form_mothername_et"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="Mother's name"
                    />
                <ImageView
                    android:id="@+id/mothername_red"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mic_icon"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/personal_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_container1"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/your_address"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <EditText
                    android:id="@+id/form_address_et"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="Address"
                    />
                <ImageView
                    android:id="@+id/address_rec"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mic_icon"
                    />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/form_submit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:text="@string/submit"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

    </LinearLayout>




</RelativeLayout>